# Construct

./: .gitignore
Construct/: CMakeLists.txt
Construct/Construct/: CMakeLists.txt  CliParser.cpp  Construct.cpp
Construct/Construct/headers/: CliParser.h  Construct.h  Error.h
Construct/Environment/: CMakeLists.txt
Construct/Environment/headers/: Environment.h
Construct/Lang/: CMakeLists.txt  ConstLang.cpp
Construct/Lang/headers/: ConstLang.h  Token.h
Construct/Tests/: CMakeLists.txt  Tests.cpp
Construct/Utils/: CMakeLists.txt  Error.cpp  File.cpp  StrUtils.cpp
Construct/Utils/headers/: ConUtils.h  File.h  StrUtils.h
